@@ -1,6 +1,8 @@
 R2.1.0-prep-bsas   May 11, 2022    Kukhee Kim
             - rebase/merge to pick up Ernest's changes in the linuxRT_build_only branch
             - build only for linuxRT target
+            - build against timing/bsa R2.0.0-1.0
+            - add performance meausrement (processing time for BLD/BSSS/BSAS callback)
 
 linuxRT_build_only    May 9, Kukhee Kim
             - branch out from R2.1.0-prep-bsas to try to build linuxRT only
